# ai-intro-homework

./: .gitignore  LICENSE  README.md  linear-regression-pytorch.ipynb  main.py  pyproject.toml
docs/: cnn-mnist-pytorch.md  lstm-jena-tensorflow.md  mlp-mnist-pytorch.md
notebooks/: linear-regression-pytorch.ipynb  mlp-mnist-pytorch.ipynb
src/: cnn-mnist-pytorch.py  lstm-jena-tensorflow.py
