[project]
name = "ai-intro-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.10",
    "uv>=0.11.6",
]
