[project]
name = "ai-intro-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=1.26,<2.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tensorflow==2.18.0",
    "tensorflow-metal==1.2.0",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.10",
    "uv>=0.11.6",
]
